[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/Panel.gd" type="Script" id=1]
[ext_resource path="res://cool/icon/icon.png" type="Texture" id=2]
[ext_resource path="res://cool/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.613281, 0.550995, 0.550995, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.529412, 0.533333, 0.533333, 0.776471 )
corner_radius_top_left = 22
corner_radius_top_right = 22
shadow_color = Color( 0.12549, 0.243137, 0.223529, 1 )
shadow_size = 4
shadow_offset = Vector2( 0, 3 )
anti_aliasing = false

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 1
outline_color = Color( 0.533333, 0.164706, 0.164706, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.713726, 0.223529, 0.466667, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 3.0
expand_margin_bottom = 1.0
shadow_color = Color( 0.27451, 0.27451, 0.27451, 0.6 )
shadow_size = 2
shadow_offset = Vector2( 0, 2 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.423529, 0.027451, 0.223529, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 2.0
shadow_color = Color( 0.27451, 0.27451, 0.27451, 0.6 )
shadow_size = 2
shadow_offset = Vector2( 0, 2 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.521569, 0.172549, 0.345098, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color( 0.27451, 0.27451, 0.27451, 0.6 )
shadow_size = 2
shadow_offset = Vector2( 0, 2 )
anti_aliasing = false

[sub_resource type="DynamicFont" id=6]
outline_size = 1
outline_color = Color( 0.0941176, 0.435294, 0.435294, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.713726, 0.223529, 0.466667, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 3.0
expand_margin_bottom = 1.0
shadow_color = Color( 0.27451, 0.27451, 0.27451, 0.6 )
shadow_size = 2
shadow_offset = Vector2( 0, 2 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.423529, 0.027451, 0.223529, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 2.0
shadow_color = Color( 0.27451, 0.27451, 0.27451, 0.6 )
shadow_size = 2
shadow_offset = Vector2( 0, 2 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.521569, 0.172549, 0.345098, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color( 0.27451, 0.27451, 0.27451, 0.6 )
shadow_size = 2
shadow_offset = Vector2( 0, 2 )

[sub_resource type="DynamicFont" id=10]
outline_size = 1
outline_color = Color( 0.0941176, 0.435294, 0.435294, 1 )
font_data = ExtResource( 3 )

[sub_resource type="ShortCut" id=11]

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.698
margin_right = 640.0
margin_bottom = 359.302
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -175.0
margin_right = 350.0
margin_bottom = 175.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Sprite" parent="Panel"]
position = Vector2( 350, 131.425 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.0
margin_top = -144.329
margin_right = 73.0
margin_bottom = -83.3291
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.819608, 0.819608, 0.819608, 1 )
text = "MISH"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonMulti" type="Button" parent="Panel"]
light_mask = 0
anchor_right = 0.1
margin_left = 126.0
margin_top = 250.0
margin_right = 186.0
margin_bottom = 275.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Multi Player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSet" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = 75.0
margin_right = 52.0
margin_bottom = 100.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSing" type="Button" parent="Panel"]
margin_left = 446.0
margin_top = 250.0
margin_right = 576.0
margin_bottom = 275.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
shortcut = SubResource( 11 )
text = "Singl Player"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/ButtonSing" to="Panel" method="_on_ButtonSing_pressed"]
